tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_wrong_method_return_type3/execute__tests__noirc_frontend_tests_check_trait_wrong_method_return_type3_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type Foo, found type ()
   ┌─ src/main.nr:12:41
   │
12 │         fn default(_x: Field, _y: Field) {
   │                                         -
   │

Aborting due to 1 previous error
