tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_wrong_method_return_type3/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type Foo, found type ()
   ┌─ src/main.nr:12:41
   │
12 │         fn default(_x: Field, _y: Field) {
   │                                         -
   │

Aborting due to 1 previous error
